--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@stripe/stripe-js": "^1.13.2",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-hot-toast": "^1.0.2",
+    "react-nextjs-toast": "^1.2.5"
   },
   "devDependencies": {
     "@tailwindcss/jit": "0.1.3",
